@@ -2,6 +2,7 @@ package org.xidea.lite.parser.test;
 
 import java.io.StringWriter;
 import java.io.Writer;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -44,7 +45,7 @@ public class TextParserTest {
 
 	public void test(String text, String result) throws Exception {
 		TextNodeParser p = new TextNodeParser();
-		ParseContextImpl context = new ParseContextImpl(new URL("http://localhost:8080/"),null,null,null);
+		ParseContextImpl context = new ParseContextImpl(new URI("http://localhost:8080/"),null,null,null);
 		p.parse(text, context, null);
 		List<Object> insts = context.toList();
 		Template t = new Template(insts);
